--- a/style/shadow_ribbon/layout.css
+++ b/style/shadow_ribbon/layout.css
@@ -430,9 +430,15 @@ p {
 }
 
 .systemMessage {
-	position: absolute;
-	margin: 0;
-	padding-left: 10px;
+	/* position: absolute; */
+	margin: 20px 10px;
+	padding: 15px 10px;
+	box-shadow: 0px 0px 2px rgba(0,0,0, 0.5);
+
+	background-color: rgba(0,0,0, 0.06);
+
+	border-radius: 10px;
+	/* border: 1px solid black; */
 	
 	left: 200px;
 	top: 28px;
